--- a/src/Workspaces/Remote/Razor/RazorServiceHub.csproj
+++ b/src/Workspaces/Remote/Razor/RazorServiceHub.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftJsonVersion)" />
     <PackageReference Include="StreamJsonRpc" Version="$(StreamJsonRpcVersion)" />
   </ItemGroup>
   <ItemGroup>
