--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,9 +2,8 @@
 <!-- Copyright (c)  Microsoft.  All Rights Reserved.  Licensed under the Apache License, Version 2.0.  See License.txt in the project root for license information. -->
 <configuration>
   <packageRestore>
-    <!-- Currently, the repository's version of NuGet.exe and Visual Studio's version
-         fight over the format of project.lock.json because the one in the respository
-         is newer. To prevent that, turn off package restore.
+    <!-- NuGet Restore was observed to cause performance problems for in-IDE builds,
+         so it has been disabled.
 
          ⚠ THIS IS A PERFORMANCE-CRITICAL LINE. DO NOT REMOVE. ⚠ -->
     <add key="enabled" value="false" />
